--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.1.0",
   "description": "React Native module for In App Rating on Android and iOS",
   "source": "src/index.tsx",
-  "main": "lib/commonjs/index.js",
+  "main": "src/index.tsx",
   "react-native": "src/index.tsx",
-  "module": "lib/module/index.js",
-  "types": "lib/typescript/index.d.ts",
+  "module": "src/index.tsx",
+  "types": "src/index.tsx",
   "files": [
     "src",
     "lib",
